@@ -170,6 +170,8 @@
 /* Introduced in IM 6.1.0 */
 #undef HAVE_UNSHARPMASKIMAGECHANNEL
 #undef HAVE_WHITETHRESHOLDIMAGE
+/* Introduced in IM 6.2.6 */
+#undef HAVE_VIGNETTEIMAGE
 #undef HAVE_XIMPORTIMAGE
 #undef MAGICKNAME
 #undef PACKAGE_BUGREPORT
