@@ -1,4 +1,5 @@
 RMagick 1.10.0
+    o Added vignette method to the Image class
     o Added crop_resize method to the Image class (thanks to Jerret Taylor for
       the suggestion and original code)
     o Added export_pixels_to_str method to the Image class
